--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:text="아이디"/>
     <EditText
+        android:id="@+id/emailEDT"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
@@ -25,9 +26,18 @@
         android:text="비밀번호"/>
 
     <EditText
+        android:ID="@+ID/passwordEdt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:hint="비밀번호 입력"
+    <Button
+        android:id="@+id/loginBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="로그인"
 
-</LinearLayout>
+
+
+
+    /LinearLayout>
