--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:text="아이디"/>
 
         <EditText
-            android:id="@+id/emailEDT"
+            android:id="@+id/emailEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
@@ -29,7 +29,7 @@
             android:text="비밀번호"/>
 
         <EditText
-            android:ID="@+ID/passwordEdt"
+            android:ID="@+id/passwordEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
